--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,10 @@
   --bluedark: rgb(30 45 64);
   --darkgreen: rgba(0, 255, 195, 0.384);
   --darkred: rgba(245, 8, 8, 0.384);
+  --darker: rgb(92, 90, 90);
 }
 
 * {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -24,6 +23,8 @@ body {
   min-width: 100vw;
   background: var(--bluedark);
   color: var(--fontlight);
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 p {
@@ -82,17 +83,22 @@ nav ul li {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-style: bold;
 }
 .navbar a {
   display: block;
   padding: 12px 16px;
   color: white;
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .navbar a.active {
-  background-color: var(--green);
+  background-color: var(--darkgreen);
+}
+
+.navbar a:hover {
+  transform: scale(1.1);
 }
 
 .main {
@@ -194,4 +200,55 @@ nav ul li {
   font-size: 30px;
   border: none;
   cursor: pointer;
+}
+
+.addMeme {
+  /* display: flex; */
+  height: 50vh;
+  width: 60vw;
+  background: rgba(0, 0, 0, 0.75);
+  background: linear-gradient(
+    to right top,
+    rgba(0, 0, 0, 0.75),
+    rgba(0, 0, 0, 0.25)
+  );
+  border: solid ghostwhite 1px;
+  border-radius: 20px;
+  box-shadow: 0px 8px 24px 0 rgba(0, 0, 0, 0.5);
+  margin: 15px 0;
+  padding: 20px;
+  color: ghostwhite;
+}
+
+.addMeme h2,
+.memeTitle {
+  padding: 20px 0;
+}
+
+.fileInput {
+  padding-bottom: 20px;
+}
+
+.addMemeBtn {
+  width: 220px;
+  margin-top: 20px;
+  padding: 5px 0;
+  font-size: 18px;
+  background: var(--green);
+  background: linear-gradient(to right top, var(--darkgreen), var(--green));
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+.memeTitle input,
+.fileInput input {
+  width: 250px;
+  height: 24px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  font-size: 14px;
+  background: rgb(236, 236, 236);
+  color: black;
 }
